--- a/src/pages/tools/hash.astro
+++ b/src/pages/tools/hash.astro
@@ -277,7 +277,7 @@ const cryptoJSCode = `
       .loading-spinner {
         width: 0px;
         height: 20px;
-2        border: 3px solid #f3f3f3;
+        border: 3px solid #f3f3f3;
         border-top: 3px solid #007bff;
         border-radius: 50%;
         animation: spin 1s linear infinite;
